swim_common/src/form/tests/derive/form/empty_tag.stderr
error: New tag cannot be empty
  --> $DIR/empty_tag.rs:19:18
   |
19 |     #[form(tag = "")]
   |                  ^^
